Added dynamic rowkey

--- a/azure-functions/package.json
+++ b/azure-functions/package.json
@@ -10,6 +10,7 @@
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
+    "@azure/data-tables": "^13.2.2",
     "@azure/storage-blob": "^12.14.0",
     "jimp": "^0.22.8"
   },
